running basic nodes for linux-64 and win-64

--- a/plugin.properties
+++ b/plugin.properties
@@ -5,7 +5,7 @@ pluginPackage=de.mpc.pia.knime
 pluginName=PIA
 
 # the version of the plugin (here only numbers and qualifier are allowed, e.g. "rc1" does not work)
-pluginVersion=1.0.0.dev
+pluginVersion=1.0.0.qualifier
 
 # the path (starting from KNIMEs Community Nodes node)
 nodeRepositoyRoot=community
