* version changed to 1.0.0.201505181444 * year adjusted in license and copyright

--- a/plugin.properties
+++ b/plugin.properties
@@ -5,7 +5,7 @@ pluginPackage=de.mpc.pia
 pluginName=PIA
 
 # the version of the plugin (here only numbers and qualifier are allowed, e.g. "rc1" does not work)
-pluginVersion=1.0.0.qualifier
+pluginVersion=1.0.0.201505181444
 
 # the path (starting from KNIMEs Community Nodes node)
 nodeRepositoyRoot=community
