--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,6 +3,14 @@ PIA - Protein Inference Algorithms
 
 PIA is a toolbox for MS based protein inference and identification analysis.
 
+PIA allows you to inspect the results of common proteomics spectrum
+identification search engines, combine them semlessly and conduct statistical
+analyses. The main focus of PIA lays on the integrated inference algorithms,
+i.e. concluding the proteins from a set of identified spectra. But it also
+allows you to inspect your peptide spectrum matches, calculate FDR values across
+different search engine results and visualize the correspondence between PSMs,
+peptides and proteins.
+
 For more information, please go to:
 https://github.com/mpc-bioinformatics/pia
  
