--- a/de.mpc.pia.knime.nodes/.classpath
+++ b/de.mpc.pia.knime.nodes/.classpath
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/jung-algorithms-2.0.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/jung-api-2.0.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/jung-graph-impl-2.0.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/jung-visualization-2.0.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia-1.0.1-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/collections-generic-4.01.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/colt-1.2.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/concurrent-1.3.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/jcommon-1.0.23.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/jfreechart-1.0.19.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia-visualization-0.0.1-SNAPSHOT.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/avalon-framework-4.1.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/BaseLib-0.0.1-SNAPSHOT.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/bcmail-jdk14-138.jar"/>
@@ -65,6 +72,5 @@
 	<classpathentry exported="true" kind="lib" path="libs/lib/xxindex-0.14.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry kind="lib" path="libs/pia-1.0.1-SNAPSHOT.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
