protein ambiguity group visualisation

--- a/de.mpc.pia.knime.nodes/build.properties
+++ b/de.mpc.pia.knime.nodes/build.properties
@@ -2,7 +2,4 @@ source.pia-knime.jar = src/
 bin.includes = plugin.xml,\
                META-INF/,\
                pia-knime.jar,\
-               libs/,\
-               libs/pia-1.0.1-SNAPSHOT.jar
-bin.excludes = libs/pia-visualization-0.0.1-SNAPSHOT.jar,\
-               libs/pia-1.0.1-SNAPSHOT.zip
+               libs/
