--- a/de.mpc.pia.knime.nodes/.classpath
+++ b/de.mpc.pia.knime.nodes/.classpath
@@ -2,7 +2,10 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/activation-1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/aopalliance-1.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/apl-parser-1.0.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/avalon-framework-4.1.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/balloontip-1.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/BaseLib-0.0.1-SNAPSHOT.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/batik-awt-util-1.6-1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/batik-css-1.6-1.jar"/>
@@ -18,12 +21,16 @@
 	<classpathentry exported="true" kind="lib" path="libs/lib/bcmail-jdk14-138.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/bcprov-jdk14-138.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/biojava-ontology-4.0.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/braf-1.0.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/c3p0-0.9.1.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/chardet-1.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/collections-generic-4.01.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/colt-1.2.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/com.springsource.antlr-2.7.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/commons-cli-1.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/lib/commons-codec-1.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/commons-codec-1.7.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/commons-collections-3.2.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/commons-collections4-4.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/commons-io-1.3.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/commons-lang3-3.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/commons-logging-1.1.jar"/>
@@ -33,8 +40,12 @@
 	<classpathentry exported="true" kind="lib" path="libs/lib/concurrent-1.3.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/cpdetector-1.0.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/CvtBaseLib-0.0.1-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/dta-parser-1.2.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/ehcache-3.1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/fastutil-6.5.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/filters-2.0.235.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/inspector-mzgraph-browser-2.0.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/inspector-swing-utils-2.0.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/isorelax-20050913.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/istack-commons-runtime-2.16.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/itext-2.0.8.jar"/>
@@ -45,13 +56,19 @@
 	<classpathentry exported="true" kind="lib" path="libs/lib/jaxb-impl-2.2.4-1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/jaxb-xjc-2.2.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/jcl-over-slf4j-1.6.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/jcommon-1.0.16.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/jcommon-1.0.23.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/jdom-2.0.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/jfreechart-1.0.13.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/jfreechart-1.0.19.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/lib/jmzidentml-1.2.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/lib/jmztab-modular-converters-3.0.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/lib/jmztab-modular-model-3.0.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/lib/jmztab-modular-util-3.0.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/jmzidentml-1.2.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/jmzml-1.7.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/jmzreader-1.2.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/jmztab-modular-converters-3.0.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/jmztab-modular-model-3.0.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/jmztab-modular-util-3.0.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/jshortcut-0.4-oberzalek.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/json-20090211.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/jung-algorithms-2.0.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/jung-api-2.0.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/jung-graph-impl-2.0.1.jar"/>
@@ -64,21 +81,36 @@
 	<classpathentry exported="true" kind="lib" path="libs/lib/logback-core-1.0.11.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/logkit-1.0.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/looks-2.2.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/lib/mascotdatfile-3.4.29.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/mascotdatfile-3.4.32.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/mgf-parser-1.2.9.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/ms-data-core-api-2.0.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/ms2-parser-1.2.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/msv-20050913.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/mzdata-parser-1.2.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/mzxml-parser-1.3.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/owlapi-api-3.5.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/owlapi-oboformat-3.5.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/owlapi-parsers-3.5.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/PDLibrary-0.0.1-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/pkl-parser-1.2.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/poi-3.9.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/lib/pride-jaxb-1.0.13.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/lib/pride-mod-2.1.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/lib/pride-utilities-2.0.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/pride-jaxb-1.0.14.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/pride-mod-2.1.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/pride-utilities-2.0.11.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/prider-data-provider-api-1.1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/px-submission-core-1.15.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/relaxngDatatype-20050913.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/servlet-api-2.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/slf4j-api-1.7.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/slf4j-log4j12-1.6.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/spring-aop-4.1.1.RELEASE.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/spring-beans-3.2.3.RELEASE.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/spring-context-4.1.1.RELEASE.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/spring-core-3.2.3.RELEASE.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/spring-expression-4.1.1.RELEASE.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/spring-jdbc-3.2.3.RELEASE.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/spring-tx-3.2.3.RELEASE.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/spring-web-4.1.1.RELEASE.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/sqlite-jdbc-3.8.10.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/sqlite4java-1.0.392.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/ssj-2.5.0.jar"/>
@@ -86,15 +118,16 @@
 	<classpathentry exported="true" kind="lib" path="libs/lib/stax2-api-3.1.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/swing-layout-1.0.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/swingx-0.9.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/lib/utilities-3.43.24.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/utilities-4.0.14.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/woodstox-core-asl-4.3.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/xercesImpl-2.5.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/xmlParserAPIs-2.0.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/xmlSchemaValidator-2.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/xpp3-1.1.4c.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/xsdlib-20050913.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/lib/xtandem-parser-1.7.18.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/lib/xxindex-0.15.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia-1.1.0-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/xtandem-parser-1.11.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/xxindex-0.17.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia-1.2.0-SNAPSHOT.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="output" path="bin"/>
