--- a/de.mpc.pia.knime.nodes/build.properties
+++ b/de.mpc.pia.knime.nodes/build.properties
@@ -2,4 +2,5 @@ source.pia-knime.jar = src/
 bin.includes = plugin.xml,\
                META-INF/,\
                pia-knime.jar,\
-               libs/
+               libs/,\
+               icons/
