Update of base library

--- a/de.mpc.pia.knime.nodes/build.properties
+++ b/de.mpc.pia.knime.nodes/build.properties
@@ -2,5 +2,5 @@ source.pia-knime.jar = src/
 bin.includes = plugin.xml,\
                META-INF/,\
                pia-knime.jar,\
-               libs/,\
-               icons/
+               icons/,\
+               libs/
