--- a/de.mpc.pia.knime.nodes/.classpath
+++ b/de.mpc.pia.knime.nodes/.classpath
@@ -42,6 +42,7 @@
 	<classpathentry exported="true" kind="lib" path="libs/lib/dta-parser-1.2.6.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/ehcache-3.1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/ehcache-core-2.6.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/FastInfoset-1.2.12.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/fastutil-6.5.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/guava-19.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/httpclient-4.2.6.jar"/>
@@ -55,9 +56,9 @@
 	<classpathentry exported="true" kind="lib" path="libs/lib/itext-2.0.8.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/itextpdf-5.5.6.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/jargs-1.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/lib/jaxb-api-2.2.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/jaxb-api-2.2.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/jaxb-core-2.2.7.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/lib/jaxb-impl-2.2.4-1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/jaxb-impl-2.2.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/jaxb-xjc-2.2.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/jchardet-1.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/jcip-annotations-1.0.jar"/>
@@ -71,12 +72,13 @@
 	<classpathentry exported="true" kind="lib" path="libs/lib/jmzidentml-1.2.6.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/jmzml-1.7.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/jmzreader-1.2.5.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/lib/jmztab-modular-converters-3.0.7-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/lib/jmztab-modular-model-3.0.7-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/lib/jmztab-modular-util-3.0.7-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/jmztab-modular-converters-3.0.7.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/jmztab-modular-model-3.0.7.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/jmztab-modular-util-3.0.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/jna-4.1.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/joda-time-2.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/jshortcut-0.4-oberzalek.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/jsr173_api-1.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/jung-algorithms-2.0.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/jung-api-2.0.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/jung-graph-impl-2.0.1.jar"/>
@@ -85,8 +87,8 @@
 	<classpathentry exported="true" kind="lib" path="libs/lib/log4j-api-2.5.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/log4j-core-2.5.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/log4j-slf4j-impl-2.5.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/lib/logback-classic-1.0.11.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/lib/logback-core-1.0.11.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/logback-classic-0.9.24.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/logback-core-0.9.24.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/logkit-1.0.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/looks-2.2.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/mascotdatfile-3.5.0.jar"/>
@@ -104,14 +106,14 @@
 	<classpathentry exported="true" kind="lib" path="libs/lib/PDLibrary-0.0.1-SNAPSHOT.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/pkl-parser-1.2.6.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/pride-jaxb-1.0.18.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/lib/pride-mod-2.1.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/pride-mod-2.1.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/pride-utilities-2.0.15.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/protobuf-java-2.5.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/px-submission-core-2.0.15.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/quartz-2.2.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/relaxngDatatype-20050913.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/servlet-api-2.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/lib/slf4j-api-1.7.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/slf4j-api-1.7.14.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/sqlite-jdbc-3.8.10.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/sqlite4java-1.0.392.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/stax-api-1.0-2.jar"/>
@@ -121,14 +123,13 @@
 	<classpathentry exported="true" kind="lib" path="libs/lib/udunits-4.5.5.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/utilities-4.8.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/woodstox-core-asl-4.3.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/lib/xercesImpl-2.5.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/xmlParserAPIs-2.0.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/xmlSchemaValidator-2.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/xpp3-1.1.4c.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/xsdlib-20050913.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/xtandem-parser-1.12.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/xxindex-0.20.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia-1.3.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia-1.3.2.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="output" path="bin"/>
