Update to core library 1.3.6

--- a/de.mpc.pia.knime.nodes/plugin.xml
+++ b/de.mpc.pia.knime.nodes/plugin.xml
@@ -78,4 +78,19 @@
            specSerializer="org.knime.core.data.uri.URIPortObjectSpec$Serializer">
      </portType>
   </extension>
+  <extension
+        point="org.eclipse.equinox.preferences.preferences">
+     <initializer
+           class="de.mpc.pia.knime.nodes.preferences.PreferenceInitializer">
+     </initializer>
+  </extension>
+  <extension
+        point="org.eclipse.ui.preferencePages">
+     <page
+           category="org.knime.workbench.ui.preferences"
+           class="de.mpc.pia.knime.nodes.preferences.PreferencePage"
+           id="de.mpc.pia.knime.nodes.preferences.PreferencePage"
+           name="PIA - Protein Inference Algorithms">
+     </page>
+  </extension>
 </plugin>
