--- a/de.mpc.pia.knime.dependencies/build.properties
+++ b/de.mpc.pia.knime.dependencies/build.properties
@@ -1,4 +1,6 @@
 bin.includes = plugin.xml,\
                META-INF/,\
-               libs/
+               libs/,\
+               libs/lib/httpclient-4.2.6.jar,\
+               libs/lib/httpcore-4.2.5.jar
 jars.compile.order = 
