--- a/de.mpc.pia.knime.dependencies/build.properties
+++ b/de.mpc.pia.knime.dependencies/build.properties
@@ -2,5 +2,6 @@ bin.includes = plugin.xml,\
                META-INF/,\
                libs/,\
                libs/lib/httpclient-4.2.6.jar,\
-               libs/lib/httpcore-4.2.5.jar
+               libs/lib/httpcore-4.2.5.jar,\
+               libs/pia-1.3.7.jar
 jars.compile.order = 
