--- a/de.mpc.pia.knime.dependencies/.classpath
+++ b/de.mpc.pia.knime.dependencies/.classpath
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="lib" path="libs/pia-1.3.11.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/lib/PDLibrary-0.0.1-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/lib/CvtBaseLib-0.0.1-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/lib/BaseLib-0.0.1-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/lib/inspector-swing-utils-2.0.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia-1.3.13.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/jung/collections-generic-4.01.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/jung/colt-1.2.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/jung/concurrent-1.3.4.jar"/>
@@ -22,11 +18,10 @@
 	<classpathentry exported="true" kind="lib" path="libs/lib/jung/stax-api-1.0.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/jung/vecmath-1.3.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/jung/wstx-asl-3.2.6.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/lib/inspector-mzgraph-browser-2.0.5.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/lib/ms-data-core-api-2.0.30.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/antlr-2.7.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/archive-data-provider-api-2.0.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/avalon-framework-4.1.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/BaseLib-0.0.1-SNAPSHOT.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/bcmail-jdk14-138.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/bcprov-jdk14-138.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/biojava-ontology-4.2.8.jar"/>
@@ -41,13 +36,18 @@
 	<classpathentry exported="true" kind="lib" path="libs/lib/commons-math-2.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/commons-net-2.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/cpdetector-1.0.7.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/CvtBaseLib-0.0.1-SNAPSHOT.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/ehcache-3.1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/fastutil-6.5.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/inspector-mzgraph-browser-2.0.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/inspector-swing-utils-2.0.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/isorelax-20050913.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/istack-commons-runtime-2.16.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/itext-2.0.8.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/jargs-1.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/lib/jaxb-core-2.2.7.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/jaxb-api-2.3.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/jaxb-core-2.3.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/jaxb-impl-2.3.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/jaxb-xjc-2.2.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/jchardet-1.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/jcl-over-slf4j-1.7.19.jar"/>
@@ -70,6 +70,7 @@
 	<classpathentry exported="true" kind="lib" path="libs/lib/logkit-1.0.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/looks-2.2.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/mascotdatfile-3.6.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/ms-data-core-api-2.0.30.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/msv-20050913.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/ols-client-1.18.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/ols-dialog-3.4.0.jar"/>
@@ -77,6 +78,7 @@
 	<classpathentry exported="true" kind="lib" path="libs/lib/owlapi-oboformat-3.5.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/owlapi-parsers-3.5.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/pdf-transcoder-1.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/PDLibrary-0.0.1-SNAPSHOT.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/poi-3.9.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/pride-jaxb-1.0.22.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/pride-mod-2.1.8.jar"/>
@@ -86,8 +88,8 @@
 	<classpathentry exported="true" kind="lib" path="libs/lib/servlet-api-2.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/slf4j-api-1.7.14.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/slf4j-log4j12-1.6.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/lib/sqlite-jdbc-3.8.10.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/sqlite4java-1.0.392.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lib/sqlite-jdbc-3.20.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/ssj-2.5.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/swagger-annotations-1.3.5.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/lib/swing-layout-1.0.3.jar"/>
