--- a/de.mpc.pia.update/.project
+++ b/de.mpc.pia.update/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>de.pc.pia.update</name>
+	<name>de.mpc.pia.update</name>
 	<comment></comment>
 	<projects>
 	</projects>
