--- a/de.mpc.pia.knime.nodes/plugin.xml
+++ b/de.mpc.pia.knime.nodes/plugin.xml
@@ -18,11 +18,13 @@
 <node
       category-path="/community/PIA"
       deprecated="false"
-      factory-class="de.mpc.pia.knime.nodes.compiler.PIACompilerNodeFactory"/>
+      factory-class="de.mpc.pia.knime.nodes.compiler.PIACompilerNodeFactory"
+      hidden="false"/>
 <node
       category-path="/community/PIA"
       deprecated="false"
-      factory-class="de.mpc.pia.knime.nodes.analysis.PIAAnalysisNodeFactory">
+      factory-class="de.mpc.pia.knime.nodes.analysis.PIAAnalysisNodeFactory"
+      hidden="false">
 </node>
 </extension>
    <extension point="org.knime.product.splashExtension">
