--- a/de.mpc.pia.knime.dependencies/.classpath
+++ b/de.mpc.pia.knime.dependencies/.classpath
@@ -24,7 +24,7 @@
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/aircompressor-0.19.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/archive-data-provider-api-2.0.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/BaseLib-0.0.1-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/biojava-ontology-5.4.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/biojava-ontology-6.0.5.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/braf-1.0.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/chardet-1.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/commons-math-2.2.jar"/>
@@ -34,8 +34,8 @@
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/fastutil-6.5.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/isorelax-20050913.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/jackson-annotations-2.4.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/jakarta.activation-api-1.2.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/jakarta.xml.bind-api-2.3.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/jakarta.activation-2.0.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/jakarta.xml.bind-api-3.0.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/javax.activation-api-1.2.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/jaxb-api-2.3.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/jaxb-core-2.3.0.jar"/>
@@ -71,29 +71,29 @@
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/owlapi-parsers-3.5.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/pdf-transcoder-1.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/PDLibrary-0.0.1-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/picocli-4.6.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/poi-4.1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/picocli-4.6.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/poi-5.0.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/pride-jaxb-1.0.22.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/pride-mod-2.1.8.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/pride-utilities-2.0.18.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/px-submission-core-2.0.15.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/reflectasm-1.11.8.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/reflectasm-1.11.9.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/relaxngDatatype-20050913.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/servlet-api-2.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/servlet-api-2.5.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/slf4j-api-1.7.25.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/sqlite-jdbc-3.20.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/SparseBitSet-1.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/sqlite4java-1.0.392.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/sqlite-jdbc-3.20.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/ssj-2.5.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/swagger-annotations-1.3.5.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/swing-layout-1.0.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/swingx-0.9.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/utilities-5.0.24.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/utilities-5.0.41.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/web-service-model-0.2.12.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/xpp3-1.1.4c.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/xsdlib-20050913.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/xtandem-parser-1.13.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/xxindex-0.23.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/pia-1.4.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/pia-1.4.6.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
