--- a/de.mpc.pia.knime.dependencies/.classpath
+++ b/de.mpc.pia.knime.dependencies/.classpath
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/jackson-annotations-2.13.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pia/lib/poi-5.2.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pride/ms-data-core-api-2.0.31-SNAPSHOT.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pride/inspector-mzgraph-browser-2.0.5.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pride/inspector-swing-utils-2.0.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pride/istack-commons-runtime-2.16.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pride/ms-data-core-api-2.0.30.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jung/collections-generic-4.01.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jung/colt-1.2.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jung/concurrent-1.3.4.jar"/>
@@ -20,7 +22,6 @@
 	<classpathentry exported="true" kind="lib" path="libs/jung/jung-visualization-2.0.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jung/stax-api-1.0.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jung/vecmath-1.3.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/jung/wstx-asl-3.2.6.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/aircompressor-0.21.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/archive-data-provider-api-2.0.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/BaseLib-0.0.1-SNAPSHOT.jar"/>
@@ -31,7 +32,6 @@
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/CvtBaseLib-0.0.1-SNAPSHOT.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/fastutil-6.5.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/isorelax-20050913.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/jackson-annotations-2.4.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/jakarta.activation-2.0.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/jakarta.xml.bind-api-3.0.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/javax.activation-api-1.2.0.jar"/>
@@ -70,7 +70,6 @@
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/pdf-transcoder-1.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/PDLibrary-0.0.1-SNAPSHOT.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/picocli-4.6.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/pia/lib/poi-5.0.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/pride-jaxb-1.0.22.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/pride-mod-2.1.8.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/pia/lib/pride-utilities-2.0.18.jar"/>
